--- a/microblog/package.json
+++ b/microblog/package.json
@@ -11,10 +11,12 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
+    "log4js": "^2.9.0",
     "morgan": "~1.9.0",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.1",
     "sequelize": "^4.31.2",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "log4js": "2.9.0"
   }
 }
